# X-RPC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/X-RPC/: x_RPC.h
src/: CMakeLists.txt  x_RPC.c
src/test/: main.cpp
